# SwordVideo

./: README.md  debug_note.txt
Aac_h264_encode_decode/: settings.gradle
Aac_h264_encode_decode/app/: build.gradle
Aac_h264_encode_decode/app/src/main/: AndroidManifest.xml
Aac_h264_encode_decode/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Aac_h264_encode_decode/app/src/main/cpp/aac/: aac_ctrl.cpp  aac_ctrl.h
Aac_h264_encode_decode/app/src/main/cpp/aac/decode/: aac_decoder.cpp  aac_decoder.h
Aac_h264_encode_decode/app/src/main/cpp/aac/encode/: aac_encoder.cpp  aac_encoder.h
Aac_h264_encode_decode/app/src/main/cpp/basic/: basic_learn.cpp  basic_learn.h
Aac_h264_encode_decode/app/src/main/cpp/jni/: jni_encode.cpp  jni_media_codec.cpp  jni_x264_encode.cpp
Aac_h264_encode_decode/app/src/main/cpp/utils/: my_log.h
Aac_h264_encode_decode/app/src/main/cpp/x264/encode/: x264_encoder.cpp  x264_encoder.h
Aac_h264_encode_decode/app/src/main/res/layout/: activity_aac.xml  activity_aac_decode.xml  activity_aac_encode.xml  activity_main.xml  activity_media_codec_encode_decode.xml  activity_media_codec_video.xml  activity_x264_encode.xml
Aac_h264_encode_decode/app/src/main/res/values/: strings.xml  themes.xml
Aac_h264_encode_decode/app/src/main/res/values-night/: themes.xml
Aac_h264_encode_decode/gradle/wrapper/: gradle-wrapper.properties
CLionProjects/cpp_basic_learn/: CMakeLists.txt  basic_demo.cpp  basic_demo.h  main.cpp
CameraRecorder/: settings.gradle
CameraRecorder/app/: build.gradle
CameraRecorder/app/src/main/: AndroidManifest.xml
CameraRecorder/app/src/main/cpp/: CMakeLists.txt
CameraRecorder/app/src/main/cpp/camera/: audio_packet_queue.h  logger.h  native_muxer.cpp  video_packet_queue.h
CameraRecorder/app/src/main/cpp/jni/: jni_ffmpeg_aac_decoder.cpp
CameraRecorder/app/src/main/res/layout/: activity_bitmap.xml  activity_bitmap_gen_mp4.xml  activity_camera.xml  activity_main.xml  activity_preview_test.xml  activity_share_texture_id.xml  activity_video_recording.xml
CameraRecorder/app/src/main/res/xml/: gl_sample.xml
CameraRecorder/common/: build.gradle
CameraRecorder/gradle/wrapper/: gradle-wrapper.properties
CppGrammar/: .gitignore  build.gradle  settings.gradle
CppGrammar/app/src/main/: AndroidManifest.xml
CppGrammar/app/src/main/cpp/: CMakeLists.txt
CppGrammar/app/src/main/cpp/android/: android_buf.cpp  android_buf.h
CppGrammar/app/src/main/cpp/jni/: jni_template.cpp  jni_test_c.cpp  native-lib.cpp
CppGrammar/app/src/main/cpp/simplec/: hello.c  hello.h  pthread_test.c  pthread_test.h
CppGrammar/app/src/main/cpp/simplecpp/: hello2.cpp  hello2.h
CppGrammar/app/src/main/cpp/utils/: my_log.h  simple_log.h
CppGrammar/app/src/main/res/layout/: activity_main.xml  lv_item.xml
CppGrammar/app/src/main/res/values/: strings.xml
CppGrammar/gradle/wrapper/: gradle-wrapper.properties
Demo/: settings.gradle
Demo/app/: build.gradle
Demo/app/src/main/: AndroidManifest.xml
Demo/app/src/main/cpp/jni/: jni_ffmpeg_aac_decoder.cpp
Demo/app/src/main/res/layout/: activity_main.xml
Demo/app/src/main/res/raw/: ffmpeg_aac_441.aac
Demo/app/src/main/res/values/: strings.xml  themes.xml
FFmpegEnDe/: .gitignore  settings.gradle
FFmpegEnDe/app/: build.gradle
FFmpegEnDe/app/src/main/: AndroidManifest.xml
FFmpegEnDe/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
FFmpegEnDe/app/src/main/cpp/audiodecode/: audio_decoder.cpp  audio_decoder.h
FFmpegEnDe/app/src/main/cpp/audioencode/: audio_encoder.cpp  audio_encoder.h
FFmpegEnDe/app/src/main/cpp/h264decode/: H264Decoder.cpp  H264Decoder.h
FFmpegEnDe/app/src/main/cpp/h264encode/: yuv_h264_encode.cpp  yuv_h264_encode.h
FFmpegEnDe/app/src/main/cpp/jni/: jni_ffmpeg_aac_decoder.cpp  jni_ffmpeg_aac_decoder_encoder.cpp  jni_ffmpeg_aac_encoder.cpp  jni_ffmpeg_h264_encode.cpp  jni_ffmpeg_mp4_muxer.cpp  jni_lame_mp3_encode.cpp
FFmpegEnDe/app/src/main/cpp/mp3encode/: LameEncoder.cpp  LameEncoder.h
FFmpegEnDe/app/src/main/cpp/mp4encode/: FFmpegMp4Muxer.cpp  FFmpegMp4Muxer.h
FFmpegEnDe/app/src/main/cpp/utils/: my_log.h
FFmpegEnDe/app/src/main/res/layout/: activity_ffmpeg_aac_decoder.xml  activity_ffmpeg_aac_encoder.xml  activity_ffmpeg_h264_decode.xml  activity_ffmpeg_h264_encoder.xml  activity_ffmpeg_mp4.xml  activity_lame_mp3_encoder.xml  activity_main.xml
FFmpegEnDe/app/src/main/res/values/: strings.xml
FFmpegEnDe/app/src/main/res/values-night/: themes.xml
FFmpegEnDe/common/src/main/: AndroidManifest.xml
SpeedBrowser/: build.gradle  configs.gradle  gradle.properties  settings.gradle
SpeedBrowser/app/: build.gradle
SpeedBrowser/app/release/: output-metadata.json
SpeedBrowser/app/src/main/: AndroidManifest.xml
SpeedBrowser/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
SpeedBrowser/app/src/main/res/anim/: no_anim.xml
SpeedBrowser/app/src/main/res/drawable/: baidu_icon.xml  bing_logo.xml  empty.xml  et_cursor_drawable.xml  google_logo.xml  logo_facebook.xml  logo_wikipedia.xml  logo_youtube.xml  spot_kline_orderbook_buy_bar_color.xml  start_logo.xml  svg_arrow_right.xml  svg_arrow_right_black.xml  svg_check_circle.xml  svg_clear.xml  svg_dark_theme.xml  svg_delete.xml  svg_download.xml  svg_email.xml  svg_favor.xml  svg_go_next.xml  svg_home.xml  svg_setting.xml  svg_water_drop.xml  svg_white_theme.xml  tip_dialog_border_bg.xml
SpeedBrowser/app/src/main/res/layout/: activity_main.xml  activity_webview.xml  common_tab_list_item.xml  common_tab_main_list_item.xml  dialog_loading.xml  item_favor.xml  item_recent_search.xml  layout_bingx_search.xml  layout_fragment_favor.xml  layout_fragment_recent.xml  new_refresh_footer.xml  new_refresh_header.xml  reward_popup_window_layout.xml  select_net_popup_window_layout.xml  setting_popup_window_layout.xml
SpeedBrowser/app/src/main/res/values-ar/: strings.xml
SpeedBrowser/gradle/wrapper/: gradle-wrapper.properties
SpeedBrowser/lib_eventcenter/: build.gradle
Test/app/: build.gradle
Test/app/src/main/: AndroidManifest.xml
Test/gradle/wrapper/: gradle-wrapper.properties
(+267 files in other folders)
